<?xml version="1.0" encoding="utf-8"?>

<!--
** Copyright 2013, the1dynasty
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
-->

<resources>
		<!-- Label for app name in launcher -->
		<!-- Edit these two strings to match your theme name -->
	<string name="app_name">Infamous Development</string>
	<string name="theme_name">Infamous Development</string>
	
		<!-- Apex Previews -->
	<string name="theme_feature">theme_header</string>
  	<string name="theme_preview1">theme_preview1</string>
  	<string name="theme_preview2">theme_preview2</string>
 	<string name="theme_preview3">theme_preview3</string>
  	<string name="theme_preview4">theme_preview4</string>
  	<string name="theme_preview5">theme_preview5</string>
  	
		<!-- Apex Theme settings -->
	<bool name="config_apexskin">true</bool>
	<bool name="config_iconpack">true</bool>
		<!-- This string shows up inside the setting to Apply the theme on Apex Launcher. I don't recommend changing it -->
	<string name="theme_description">"Open this theme from the app drawer to change wallpaper, find me on social sites, rate theme, or just to check out my other themes!"</string>
  	
		<!-- ADW Stuff -->
		<!-- 1=top dots, 2=top slider, 3=bottom slider, 4=ics slider -->
	<string name="config_desktop_indicator_type">4</string>
		<!-- Force the theme to use an specific dock style -->
		<!--  0=None, 1=3buttons, 2=5buttons, 3=1button -->
	<string name="main_dock_style">2</string>
	
  		<!-- Go Launcher stuff -->
	<string name="theme_title">Infamous Development</string>
	<string name="theme_info">Names says it all</string>
  	<bool name="config_iconpack">true</bool>
	<bool name="enableIconPack">true</bool>
	<bool name="enableDockPack">false</bool>
	<string name="theme_title">Infamous Icons</string>
	<string name="go_applied">Thanks for using Infamous Icons. Your theme is being set!</string>

    <!-- menu items -->
    <string name="menu_show_drawer_icon">Show in app drawer</string>
		
	<!-- ads -->
	<string name="banner_ad_unit_id">ca-app-pub-1365616957524122/9531393493</string>
    
	<!-- Strings in the activity -->
    <string name="desc">This will save the logs, compress them, and let you upload them easily.</string>
    <string name="log_select">Select log types:</string>
    <string name="main_log">Main Log</string>
    <string name="kernel_log">Kernel Log</string>
    <string name="last_kmsg">Last Kernel Log</string>
    <string name="modem_log">Modem Log</string>
    <string name="take_log">Take Log</string>

    <string name="optional_info">Optional Information:</string>
	<string name="file_name">Text to append to file name</string>
	<string name="notes">Notes to include in the zip file</string>
	<string name="grep_prompt">Grep the following log:</string>
	<string name="grep_hint">Grep String</string>

    <!-- Status messages -->
    <string name="working">Working&#8230;</string>
    <string name="done">Done!</string>
    <string name="checking_root">Checking root access&#8230;</string>
    <string name="close">Close</string>
    <string name="save_path">Logs saved to sdcard/</string>
    <string name="space_freed">Freed %.1f MB</string>

    <!-- Edit path strings -->
    <string name="change_path">Set Root Path</string>
    <string name="path_info">This sets the path to use instead of /storage/emulated/ for root access on Android 4.3+ devices.\n
		<b>DO NOT CHANGE UNLESS YOU KNOW WHAT YOU ARE DOING.</b></string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <!-- Warnings/Errors -->
    <string name="noroot">Warning: No root access. Logs may be incomplete or missing.</string>
    <string name="noroot_jb">Warning: No root access. Without root, it is not possible to get system or modem logs, 
		and with some 3.x kernels it also may not be able to get kernel logs.</string>
    <string name="error">Error saving logs. Check your SD card.</string>
    <string name="storage_err">The external storage is not writable, unable to save logs.</string>
    <string name="warn_modem">Note: Modem logs may contain personal information such as phone number or IMEI.</string>

	<!-- Menu Strings -->
	<string name="about">About</string>
	<string name="faq">FAQ</string>
	<string name="clean_uncompressed">Clean Uncompressed Logs</string>
	<string name="clean_all">Clean All Logs</string>
	<string name="menu_settings">Settings</string>

	<!-- Exception dialog strings -->
	<string name="show_stacktrace">Show Stacktrace</string>
	<string name="error_dialog_title">Uh-oh!</string>
	<string name="send_bugreport">Send Bug Report</string>
	<string name="dismiss">Dismiss</string>
	<string name="bugreport_notice">Note: Sending a bug report opens an email application so you can email the developer</string>
	<string name="bugreport_disabled">Note: Bug reporting has been disabled because you are running Android 4.3 or higher and did not use root.
		Please enable root access and try again.</string>

	<string name="syslog_faq">Log FAQ</string>

	<!-- Oh shit strings -->
	<string name="oh_shit_title">Well, this sucks</string>
	<string name="oh_shit_message">You don\'t seem to have an email application installed. This will now crash.
	    If you have the option, please send a report through the force close dialog.</string>
</resources>
