<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_height="wrap_content"
			android:text=""
			android:layout_width="wrap_content"/>

		<TextView
			android:layout_height="wrap_content"
			android:text=""
			android:layout_width="wrap_content"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/desc"
			android:padding="5dip"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/log_select"
			android:paddingTop="20dip"
			android:padding="5dip"/>

		<CheckBox
			android:id="@+id/kernel_log"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/kernel_log"
			android:onClick="logChange"/>

		<CheckBox
			android:id="@+id/last_kmsg"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/last_kmsg"
			android:onClick="logChange"/>

		<CheckBox
			android:id="@+id/main_log"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/main_log"
			android:onClick="logChange"/>

		<CheckBox
			android:id="@+id/modem_log"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:text="@string/modem_log"
			android:onClick="logChange"/>

		<TextView
			android:id="@+id/warnings"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:gravity="center"
			android:padding="5dip"
			android:text=""
			android:textStyle="bold|italic"/>

		<TextView
			android:id="@+id/warn_root"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:gravity="center"
			android:padding="5dip"
			android:text="@string/noroot"
			android:visibility="gone"
			android:textStyle="bold|italic"/>

		<Button
			android:id="@+id/take_log"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5dip"
			android:text="@string/checking_root"
			android:onClick="startLog"
			android:enabled="false"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5dip"
			android:text="@string/optional_info"/>

		<EditText
			android:id="@+id/file_name"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:padding="5dip"
			android:maxLength="10"
			android:hint="@string/file_name"/>

		<EditText
			android:id="@+id/notes"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:padding="5dip"
			android:inputType="textCapSentences|textAutoCorrect|textMultiLine"
			android:hint="@string/notes"/>

		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:padding="5dip"
				android:text="@string/grep_prompt"
				android:layout_gravity="left"/>

			<Spinner
				android:id="@+id/grep_log"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:padding="5dip"
				android:entries="@array/grep_options"
				android:prompt="@string/grep_prompt"
				android:layout_gravity="right"/>

		</LinearLayout>

		<EditText
			android:id="@+id/grep_string"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:padding="5dip"
			android:hint="@string/grep_hint"/>

	</LinearLayout>

</ScrollView>

